# net_jet

./: db.sqlite3  manage.py  pyproject.toml
main/static/main/css/: main.css
main/templates/main/: index.html  layout.html
net_jet/: asgi.py  credential.py  settings.py  urls.py  wsgi.py
net_jet/articles/: apps.py  models.py  urls.py  views.py
net_jet/articles/static/article/css/: article_show.css  articles_index.css
net_jet/main/: apps.py  urls.py  views.py
net_jet/main/static/main/css/: main.css
net_jet/main/static/main/fontawesome/metadata/: icons.yml  (+1 more)
net_jet/main/templates/main/: index.html  layout.html
net_jet/settings/: development.py
net_jet/templates/: layout.html
net_jet/templates/articles/: index.html  show.html
net_jet/templates/main/: about.html  index.html
net_jet/templates/tools/: inactive_intf.html  ip_calc.html  providers.html  search_arp_by_mac.html  switch_intf.html  test_isp.html
net_jet/templates/users/: login.html
net_jet/tools/: apps.py  ip_calc_forms.py  urls.py  views.py
net_jet/tools/scripts/: get_info_cisco_dev.py  get_info_netbox.py  get_recommendations.py  get_service_tools.py  recommendations_v01.yml
net_jet/tools/scripts/textfsm_templates/: cisco_parse_sh_ip_arp.template  snr_parse_sh_int_eth_stat.template  snr_parse_sh_intf.template  snr_parse_sh_mac_add_intf_ether.template
net_jet/tools/static/tools/css/: inactive_intf.css  ip_calc.css  providers.css  search_arp_by_mac.css  switch_intf.css  test_isp.css
net_jet/users/: apps.py  forms.py  urls.py  views.py
net_jet/users/static/users/css/: login.css
