[tool.poetry]
name = "netjet"
version = "0.1.0"
description = ""
authors = ["netandman <mihacka@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.4"
fontawesomefree = "6.4.2"
pillow = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
